# microservices-addkg

./: .gitignore  README.md
anomaly-detector/: Dockerfile  framework.py  ink-embeddings.py  requirements.txt  utils.py
anomaly-detector/ink/: requirements.txt
anomaly-detector/ink/base/: connectors.py  graph.py  structure.py
anomaly-detector/ink/miner/: task_agnostic_mining.py  task_specific_mining.py
anomaly-detector/notebooks/: baseline.ipynb  eval-ensemble.ipynb  eval.ipynb  lstm-autoencoder.ipynb  utils.py
data/: labels.csv  labels_revised.csv
data-collector/: .gitlab-ci.yml  Dockerfile  collector.py  config.py  cron.py  dashboard.py  features.py  main.py  ontology.py  pyproject.toml  reconstruct.py  requirements.txt  tasks.py
data/2024-02-10/features/: baseline-example.csv  baseline.pickle
data/2024-02-11/features/: baseline-example.csv  baseline.pickle
data/2024-02-12/features/: baseline-example.csv  baseline.pickle
data/2024-02-13/features/: baseline-example.csv  baseline.pickle
data/2024-02-14/features/: baseline-example.csv  baseline.pickle
fault-injector/: .gitignore  .gitlab-ci.yml  Dockerfile  cleanup.py  example.json  gql_.py  main.py  requirements.txt  results.csv  sgqlc_.py  test.py
fault-injector/litmus/: README.md  __init__.py  client.py  schema.json  schema.py
load-generator/: .gitignore  .gitlab-ci.yml  Dockerfile  config.py  graph.html  load_distribution.py  locustfile.py  requirements.txt  tasks.py  utils.py  visualize_distribution.py  visualize_markov_chain.py
load-generator/data/: requests.parquet
(+13 files in other folders)
