[tool.poetry]
name = "data-collector"
version = "0.1.0"
description = "Data collection from K8s microservice application using cAdvisor and Istio"
authors = ["pimoens <pieter.moens@ugent.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
celery = { version="^5.3.6", extras=["redis"] }
datetime = "^5.1"
eventlet = "^0.34.2"
joblib = "^1.3.2"
kubernetes = "^26.1.0"
networkx = "^3.1"
pqdm = "^0.2.0"
prometheus-api-client = "^0.5.3"
pytimeparse = "^1.1.8"
pytz = "^2023.3"
rdflib = "^7.0.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
validators = "^0.20.0"
xmltodict = "^0.13.0"


[tool.poetry.group.visualization]
optional = true
[tool.poetry.group.visualization.dependencies]
dash = "^2.10.0"
dash-cytoscape = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
